import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);

const validMediaFeatureValues = [
	['any-hover', 'hover'],
	['any-pointer', 'fine'],
	['aspect-ratio', '16 / 9'],
	['color', '8'],
	['color-gamut', 'p3'],
	['color-index', '256'],
	['device-aspect-ratio', '16 / 9'],
	['device-height', '1080px'],
	['device-posture', 'folded'],
	['device-width', '1920px'],
	['display-state', 'maximized'],
	['display-mode', 'standalone'],
	['display-mode', 'window-controls-overlay'],
	['dynamic-range', 'high'],
	['environment-blending', 'additive'],
	['forced-colors', 'active'],
	['grid', '1'],
	['height', '100dvh'],
	['horizontal-viewport-segments', '2'],
	['hover', 'none'],
	['inverted-colors', 'inverted'],
	['monochrome', '1'],
	['nav-controls', 'back'],
	['orientation', 'landscape'],
	['overflow-block', 'paged'],
	['overflow-inline', 'scroll'],
	['pointer', 'coarse'],
	['prefers-color-scheme', 'dark'],
	['prefers-contrast', 'custom'],
	['prefers-reduced-data', 'reduce'],
	['prefers-reduced-motion', 'reduce'],
	['prefers-reduced-transparency', 'reduce'],
	['resolution', '2dppx'],
	['resizable', 'true'],
	['scan', 'progressive'],
	['scripting', 'enabled'],
	['shape', 'round'],
	['ua-color-scheme', 'dark'],
	['update', 'slow'],
	['vertical-viewport-segments', '2'],
	['video-color-gamut', 'rec2020'],
	['video-dynamic-range', 'standard'],
	['width', '80rem'],
];

test.snapshot({
	valid: [
		...validMediaFeatureValues.map(([name, value]) => `@media (${name}: ${value}) {}`),
		'@media (color) {}',
		'@media (min-width: 10px) and (max-width: 20px) {}',
		'@media (width > 10px) {}',
		'@media (10px < width) {}',
		'@media (10px < width < 20px) {}',
		'@media (infinite > resolution) {}',
		'@media (width > calc(10px + 1em)) {}',
		'@media (color: calc(1 + 1)) {}',
		'@media (width: env(viewport-segment-width 0 0)) {}',
		'@media (color: env(color-depth)) {}',
		'@media (aspect-ratio: env(viewport-ratio)) {}',
		'@media (resolution: env(display-resolution)) {}',
		'@media (orientation: env(viewport-orientation)) {}',
		'@media (width > calc(env(viewport-segment-width 0 0) + 1px)) {}',
		'@media (width >= theme(--breakpoint-xl)) {}',
		'@media (width: theme("screens.md")) {}',
		{code: '@media (width: theme(screens.md)) {}', languageOptions: {tolerant: true}},
		'@media (width > calc(theme(--spacing) * 10)) {}',
		'@media (width: unknown-function()) {}',
		'@media (width: 0) {}',
		'@media (width: -1px) {}',
		'@media (color: -1) {}',
		'@media (RESOLUTION: INFINITE) {}',
		String.raw`@media (w\69 dth: 10px) {}`,
		'@media (--narrow) {}',
		'@media (--narrow: red) {}',
		'@media (-webkit-min-device-pixel-ratio: 2) {}',
		'@media (min--moz-device-pixel-ratio: 2) {}',
		'@media (max--moz-device-pixel-ratio: 2) {}',
		'@media (MIN--MOZ-device-pixel-ratio: 2) {}',
		String.raw`@media (m\69 n--moz-device-pixel-ratio: 2) {}`,
		'@media (min--webkit-device-pixel-ratio > 2) {}',
		'@media (min--moz-unknown-feature: 2) {}',
		'@media (10px < -vendor-feature) {}',
		'@media (min-width) {}',
		'@media (orientation > portrait) {}',
		'@media (min-width > 10px) {}',
		'@container (unknown-feature: red) {}',
		'@media (/* before */ width /* name */: /* value */ 10px) {}',
		'.element { @media (width: 10px) { color: red; } }',
	],
	invalid: [
		'@media (unknown-feature) {}',
		'@media (unknown-feature: 10px) {}',
		'@media (/* before */ unknown-feature /* name */: 10px) {}',
		'@media (/* unknown-feature */ unknown-feature: 10px) {}',
		'@media (unknown-feature > 10px) {}',
		'@media (10px < unknown-feature) {}',
		'@media (light-level: normal) {}',
		'@media (width: red) {}',
		'@media (width: 10pixels) {}',
		'@media (width: var(--breakpoint)) {}',
		'@media (width: calc(var(--breakpoint) + env(safe-area-inset-left))) {}',
		'@media (color: 1.5) {}',
		'@media (width: rgb(0 0 0)) {}',
		'@media (min-device-pixel-ratio: 2) {}',
		'@media (min-widht: 10px) {}',
		'@media (aspect-ratio: 10px) {}',
		'@media (resolution: 10px) {}',
		'@media (grid: 2) {}',
		'@media (orientation: square) {}',
		'@media (display-mode: windowed) {}',
		'@media (device-posture: flat) {}',
		'@media (shape: square) {}',
		'@media (red < width < blue) {}',
		// U+3000 is not CSS whitespace, so it is part of the feature name.
		'@media (\u3000\u3000unknown-feature) {}',
	],
});
